Les tapis marchent, il reste certains bugs à tester en conditions réelles